Includes: - New interface - Layout stabilization for Contact Maps - Beginnings of a small multiples interface

--- a/trunk/.settings/org.eclipse.pde.prefs
+++ b/trunk/.settings/org.eclipse.pde.prefs
@@ -1,4 +1,4 @@
-#Fri Jan 06 08:32:13 EST 2012
+#Tue Jun 05 14:54:02 EDT 2012
 compilers.f.unresolved-features=1
 compilers.f.unresolved-plugins=1
 compilers.incompatible-environment=1
