Formatting in DATMultiPageEditor.java All observables are now selected in results by default.

--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -15,5 +15,7 @@ bin.includes = plugin.xml,\
                lib/BNGParser.jar,\
                distributionResources/Simulation/BioNetGen-2.2.0/,\
                distributionResources/Simulation/NFSim-1.10-src/,\
-               distributionResources/Simulation/SampleModels/
+               distributionResources/Simulation/SampleModels/,\
+               distributionResources/appIcon.icns,\
+               distributionResources/Simulation/BioNetGen-2.2.2/
 source.. = src
