Added commons-lang3-3.1.jar to lib directory and modified build.properties to include it

--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -17,5 +17,6 @@ bin.includes = plugin.xml,\
                distributionResources/Simulation/NFSim-1.10-src/,\
                distributionResources/Simulation/SampleModels/,\
                distributionResources/appIcon.icns,\
-               distributionResources/Simulation/BioNetGen-2.2.2/
+               distributionResources/Simulation/BioNetGen-2.2.2/,\
+               lib/commons-lang3-3.1.jar
 source.. = src
